kubernetes/staging/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freelance-service
  namespace: staging
spec:
  type: NodePort  # Ensure the service type is NodePort
  selector:
    app: freelance
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30001  # Updated NodePort to 30001
